# vendor_iuni_u3

qcom/opensource/bluetooth/: Android.mk  AndroidManifest.xml
qcom/opensource/bluetooth/bttestapp/: Android.mk  AndroidManifest.xml
qcom/opensource/bluetooth/hiddtestapp/: Android.mk  AndroidManifest.xml
qcom/opensource/bluetooth/pxp-monitor/: Android.mk  AndroidManifest.xml
qcom/opensource/bluetooth/res/layout/: auth.xml  bluetooth_access.xml
qcom/opensource/bluetooth/res/values-zh-rCN/: strings.xml  strings_dun.xml  strings_ftp.xml  strings_map.xml  strings_sap.xml
qcom/opensource/fm/fmapp2/: AndroidManifest.xml
qcom/opensource/kernel-tests/: Makefile.am  configure.ac
qcom/opensource/kernel-tests/TEMPLATE/: Kbuild  Makefile.am  xyzmod.c
qcom/opensource/kernel-tests/bus-timeout/: Android.mk  Kbuild  Makefile.am  README  bus_timeout_mod.c
qcom/opensource/kernel-tests/coresight/: Android.mk  cs_common.sh  cs_test.sh
qcom/opensource/kernel-tests/coresight/byte-cntr/: Android.mk  byte_cntr.sh
qcom/opensource/kernel-tests/coresight/etm/: Android.mk
qcom/opensource/kernel-tests/coresight/mult_trace/: Android.mk
qcom/opensource/kernel-tests/coresight/platform/: Android.mk  platform.sh
qcom/opensource/kernel-tests/coresight/profile/: Android.mk  Kbuild  Makefile.am  cs_profile_mod.c
qcom/opensource/kernel-tests/coresight/sink_switch/: Android.mk  sinkswitch.sh
qcom/opensource/kernel-tests/coresight/stm/: Android.mk
qcom/opensource/kernel-tests/ion/: Android.mk  Kbuild  Makefile.am  README.txt  cp_ion_tests.c  ion_test_plan.h  ion_test_utils.c  ion_test_utils.h  iontest.h  iontest.sh  kernel_ion_tests.c  msm_ion_test_module.c  msm_iontest.c  run.sh  user_ion_tests.c
qcom/opensource/kernel-tests/memory_prof/: Android.mk  Kbuild  Makefile.am  README.txt  alloc_profiles.c  memfeast.c  memory_prof.c  memory_prof.h  memory_prof.sh  memory_prof_module.c  memory_prof_module.h  memory_prof_util.c  memory_prof_util.h  run.sh  timing_debug.c  timing_debug.h
qcom/opensource/kernel-tests/memory_prof/alloc_profiles/: 1MB-10MB.txt  4KB-1MB.txt  builtin.txt  general.txt
qcom/opensource/kernel-tests/memory_prof/hostscripts/: README  parse_memory_prof_results.py  stats.py  trace_2_alloc_profile.py  tracepoint_parser.sh
qcom/opensource/kernel-tests/msm_bus/: Android.mk  Kbuild  Makefile.am  msm_bus_ioctl.c  msm_bus_test.c  msm_bus_test.sh
qcom/opensource/kernel-tests/msm_iommu/: Android.mk  Kbuild  Makefile.am  README.txt  apq8084_bfb.txt  apq8084_lpae_bfb.txt  iommutest.h  iommutest.sh  mpq8092_bfb.txt  msm_iommu_test_module.c  msm_iommutest.c
qcom/opensource/kernel-tests/ocmem/: Android.mk  Kbuild  Makefile.am  README.txt  msm_ocmem_test_module.c  ocmem_test.c  ocmem_test.sh  run.sh
qcom/opensource/kernel-tests/qdss/: Android.mk  README.txt
qcom/opensource/kernel-tests/sps/: Android.mk  Kbuild  Makefile.am  msm_sps_test.h  msm_sps_test_module.c
qcom/opensource/kernel-tests/v4l2apps/: Makefile.am  README.txt  rgb565.raw  run.sh  v4l2ops.c  v4l2ops.h  v4l2overlay.c  yuv420.raw
qcom/opensource/kernel-tests/watchdog/: Android.mk  Kbuild  Makefile.am  msm_watchdog_test.sh  msm_watchdog_test_module.c
qcom/opensource/stm-log/: Android.mk  stm-log.c  stm-log.h  stm-log.txt  stm-test.c
qcom/opensource/testframework/: Android.mk
qcom/opensource/testframework/inc/: systracer.h  testframework.h
qcom/opensource/testframework/src/: Systracer.cpp  TFSShell.cpp  TFSShell.h  TestFramework.cpp  TestFramework.h  TestFrameworkApi.cpp  TestFrameworkCommon.cpp  TestFrameworkCommon.h  TestFrameworkHash.cpp  TestFrameworkHash.h  TestFrameworkService.cpp  TestFrameworkService.h  TestFrameworkServiceMain.cpp
qcom/opensource/time-services/: time_genoff.h
qcom/proprietary/QualcommSettings/: Android.mk
qcom/proprietary/QuickBoot/: AndroidManifest.xml
qcom/proprietary/common/config/: device-vendor.mk
qcom/proprietary/common/etc/: apns-conf.xml
qcom/proprietary/common/msm8974/: BoardConfigVendor.mk
qcom/proprietary/mm-still/: Android.mk
qcom/proprietary/oem-services/BackupAgent/: Android.mk
qcom/proprietary/qcril/qcril_fusion/: qcril_fusion.mk
qcom/proprietary/qcril/qcril_qmi/: qcril_other.c  qcril_qmi.mk  qcril_qmi_nas.c  qcril_qmi_nas2.c  qcril_qmi_voice.c  qcril_qmi_voice.h
qcom/proprietary/qcril/qcrilhook_oem/: Android.mk
qcom/proprietary/qcril/wmsts/: Android.mk
qcom/proprietary/qmi/: qmi.mk
qcom/proprietary/qmi/services/: device_management_service_v01.c  device_management_service_v01.h
qcom/proprietary/qmi/src/: Android.mk
qcom/proprietary/sensors/AKM8963/: AKCommon.h  AKCompass.h  AKMD_APIs.c  AKMD_APIs.h  Android.mk  CustomerSpec.h  FileIO.c  FileIO.h  Measure.c  Measure.h
qcom/proprietary/sensors/AKM8963_PDC/: AKCommon.h  AKCompass.h  AKMD_APIs.c  AKMD_APIs.h  Android.mk  CustomerSpec.h  FileIO.c  FileIO.h  Measure.c  Measure.h  libAKM.def
qcom/proprietary/sensors/AKM8975/: AKCommon.h  AKCompass.h  AKMD_APIs.c  AKMD_APIs.h  Android.mk  CustomerSpec.h  FileIO.c  FileIO.h  Measure.c  Measure.h
qcom/proprietary/sensors/QSensorTest/: Android.mk
qcom/proprietary/telephony-apps/CellBroadcastWidget/: Android.mk
qcom/proprietary/telephony-apps/EmbmsTestApp/: Android.mk
qcom/proprietary/telephony-apps/MultiplePdnTest/: Android.mk
qcom/proprietary/telephony-apps/SimContacts/: Android.mk
qcom/proprietary/thermal-engine/: pid-data.c  ss-data.c  thermal_util.c
qcom/proprietary/thermal-engine/inc/: thermal.h
qcom/proprietary/ultrasound/PenPairing/: Android.mk  AndroidManifest.xml
qcom/proprietary/ultrasound/UltrasoundSettings/: Android.mk
qcom/proprietary/ultrasound/cfg/: readme.txt
qcom/proprietary/ultrasound/ual/: usf_types.h
qcom/proprietary/ultrasound/ual_util/: ual_util.cpp  ual_util.h  usf_coord_transformer.cpp  usf_coord_transformer.h  usf_unix_domain_socket.cpp  usf_unix_domain_socket.h  usf_validation.cpp
qcom/proprietary/ultrasound/usnd_route/: usnd_route.c
qcom/proprietary/usb_uicc_client/: usb_uicc_daemon.c  usb_uicc_daemon.h  usb_uicc_qmi.c
qcom/proprietary/wlan/ath6kl-utils/: Android.mk  configure.ac
(+697 files in other folders)
